# mishmish

./: Dockerfile  MISHBOT_STRATEGY.md  README.md  RULES.md  analyze_turns.py  auth.py  autoplay.py  bot.py  bot_sim.py  compare_bot.py  db.py  deck.py  fly.dev.toml  fly.toml  game.py  inspect_server.py  lobby.py  main.py  pyproject.toml  test_game_management.py  test_reconnection.py
docs/plans/: 2026-03-07-availability-notifications-design.md  2026-03-07-availability-notifications.md
docs/superpowers/plans/: 2026-03-15-history-bot-improvements.md  2026-03-17-autoplay-self-improving-bot.md  2026-06-02-resume-game-prompt.md
docs/superpowers/specs/: 2026-03-15-history-bot-improvements-design.md  2026-03-17-autoplay-self-improving-bot-design.md  2026-06-02-resume-game-prompt-design.md
static/: app.js  index.html  style.css
tests/: test_availability.py  test_bot.py  test_bot_sim.py  test_bot_timeout.py  test_bot_v3.py  test_game.py
