[project]
name = "mishmish"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "python-multipart",
    "aiosqlite>=0.22.1",
    "bcrypt>=5.0.0",
    "pyjwt>=2.11.0",
    "twilio>=9.10.2",
    "httpx>=0.28.1",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
]
